# agent_evaluator

./: .gitignore  QUICKSTART.md  QWEN.md  README.md  install_deps.sh  pyproject.toml  requirements.txt  智能体测评指标文档.md  极栈部署文档.md
examples/configs/: agent_workflow.yml  custom_metrics.yml  multi_platform.yml  simple_rag.yml
examples/data/: agent_task_dataset.json  dify_test_dataset.json  rag_qa_dataset.json
schemas/: eval_config.schema.json
src/agent_evaluator/: __init__.py  cli.py  runner.py
src/agent_evaluator/adapters/: __init__.py  base.py  bisheng.py  coze.py  dify.py  langchain.py  langgraph.py  n8n.py  streaming.py
src/agent_evaluator/core/: __init__.py  config.py  result.py  sample.py
src/agent_evaluator/evaluator/: __init__.py  executor.py  metrics_registry.py
src/agent_evaluator/loaders/: __init__.py  config_loader.py  dataset_loader.py
src/agent_evaluator/reporters/: __init__.py  base.py  console.py  csv_reporter.py  html_reporter.py  json_reporter.py
src/agent_evaluator/utils/: logger.py
tests/fixtures/: __init__.py
tests/test_adapters/: __init__.py  test_dify.py  test_streaming.py
tests/test_evaluator/: __init__.py  test_runner.py
tests/test_loaders/: __init__.py
